# deep-learning-from-scratch

./: pyproject.toml
notebooks/: logistic_regression.ipynb
