[project]
name = "dlfs"
version = "0.1.0"
description = "Deep learning algorithms from scratch so I can get hired"
readme = "README.md"
authors = [
    { name = "Diego Ortiz", email = "dialorve@gmail.com" }
]
requires-python = ">=3.12.11"
dependencies = [
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
